--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["yasufumi <yasufumi.taniguchi@gmail.com>"]
 python = "^3.9"
 intervaltree = "^3.1.0"
 pyahocorasick = "^1.4.2"
+conllu = "^4.4"
+seqeval = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -19,3 +21,19 @@ mypy = "^0.910"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
+exclude = '''
+/(
+    .eggs
+  | .git
+  | .hg
+  | .pytest_cache
+  | .mypy_cache
+  | .tox
+  | .venv
+  | build
+  | dist
+)/
+'''
