--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ ipython = "^7.26.0"
 flake8 = "^3.9.2"
 black = "^21.7b0"
 mypy = "^0.910"
+pytest-cov = "^2.12.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
