--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ intervaltree = "^3.1.0"
 pyahocorasick = "^1.4.2"
 conllu = "^4.4"
 seqeval = "^1.2.2"
+pytokenizations = "^0.8.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -17,6 +18,7 @@ ipython = "^7.26.0"
 flake8 = "^3.9.2"
 black = "^21.7b0"
 mypy = "^0.910"
+pytest-cov = "^2.12.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
