--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ flake8 = "^3.9.2"
 black = "^21.7b0"
 mypy = "^0.910"
 pytest-cov = "^2.12.1"
+isort = "^5.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
