--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,8 @@ description = ""
 authors = ["yasufumi <yasufumi.taniguchi@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-intervaltree = "^3.1.0"
+python = "^3.8"
 pyahocorasick = "^1.4.2"
-conllu = "^4.4"
-seqeval = "^1.2.2"
 pytokenizations = "^0.8.4"
 
 [tool.poetry.dev-dependencies]
@@ -19,6 +16,7 @@ flake8 = "^3.9.2"
 black = "^21.7b0"
 mypy = "^0.910"
 pytest-cov = "^2.12.1"
+isort = "^5.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
