--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 repository = "https://github.com/tech-sketch/seqlabel"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.7"
 pyahocorasick = "^1.4.2"
 pytokenizations = "^0.8.4"
 
