--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -17,12 +17,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        poetry install
     - name: Build a binary wheel and a source tarball
       run: |
         poetry build
     - name: Publish a Python distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        user: ${{ secrets.PYPI_USERNAME }}
-        password: ${{ secrets.PYPI_PASSWORD }}
+      env:
+        PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: |
+        poetry publish -u ${PYPI_USERNAME} -p ${PYPI_PASSWORD}
